fix(daffio): update platform logos to work in dark mode

--- a/apps/daffio/src/app/content/home/components/home-callout-platforms/home-callout-platforms.component.scss
+++ b/apps/daffio/src/app/content/home/components/home-callout-platforms/home-callout-platforms.component.scss
@@ -24,3 +24,13 @@
 		grid-area: shopify;
 	}
 }
+
+:host-context(.daff-theme-dark) {
+	.daffio-home-callout-platforms {
+		&__logos {
+			> * {
+				filter: invert(1);
+			}
+		}
+	}
+}
